2003-02-22  Ulrich Drepper  <drepper@redhat.com>

	* Makefile: Add dependency for $(objpfx)version.d.

	* eintr.c (eintr_source): Add unnecessary return but the compiler
	insists.

	* tst-kill3.c: Include <unistd.h>.

2003-02-21  Roland McGrath  <roland@redhat.com>

	* pthread_create.c (start_thread): Call __libc_thread_freeres.

2003-02-21  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (tests): Add tst-eintr1.
	(distribute): Add eintr.c.
	* tst-eintr1.c: New file.
	* eintr.c: New file.

	* pthread_cancel.c (pthread_cancel): Use tkill directly.

	* sysdeps/unix/sysv/linux/pthread_kill.c (__pthread_kill):
	Disallow sending SIGCANCEL.

	* Makefile (tests): Remove tst-basic7.  Add tst-kill1, tst-kill2,
	tst-kill3, tst-kill4, tst-kill5, tst-kill6.
	* tst-kill1.c: New file.
	* tst-kill2.c: New file.
	* tst-kill3.c: New file.
	* tst-kill5.c: New file.
	* tst-kill6.c: New file.
	* tst-basic7.c: Renamed to...
	* tst-kill4.c: ...this.

2003-02-21  Roland McGrath  <roland@redhat.com>

	* Makefile (install-lib-ldscripts): New variable.

2003-02-21  Ulrich Drepper  <drepper@redhat.com>

	* pthreadP.h: Define INVALID_TD_P and INVALID_NOT_TERMINATED_TD_P.
	* pthread_cancel.c: Use INVALID_TD_P.
	* pthread_detach.c: Likewise.
	* pthread_getschedparam.c: Likewise.
	* pthread_setschedparam.c: Likewise.
	* sysdeps/pthread/pthread_getcpuclockid.c: Likewise.
	* sysdeps/unix/sysv/linux/pthread_kill.c: Likewise.
	* pthread_join.c: Use INVALID_NOT_TERMINATED_TD_P.
	* pthread_timedjoin.c: Likewise.

	* tst-basic7.c: Include <signal.h>.

	* pthread_join.c (pthread_join): Limited checking for invalid
	descriptors.
	* pthread_timedjoin.c (pthread_timedjoin_np): Likewise.

2003-02-20  Ulrich Drepper  <drepper@redhat.com>

	* pthread_create.c (deallocate_tsd): Reset found_nonzero at the
	beginning of the loop.  Clear the entire first block of TSD.
	* Makefile (tests): Add tst-key4.
	* tst-key4.c: New file.

2003-02-18  Ulrich Drepper  <drepper@redhat.com>
