@@ -1,5 +1,8 @@
 2003-02-22  Ulrich Drepper  <drepper@redhat.com>
 
+	* sysdeps/unix/sysv/linux/i386/i486/pthread_barrier_wait.S: Shave
+	off 3 more bytes by using offset-less instructions when possible.
+
 	* Makefile: Add dependency for $(objpfx)version.d.
 
 	* eintr.c (eintr_source): Add unnecessary return but the compiler
